# l2p2

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  perf  res._xt
cmake/: FindOpenCL.cmake
include/array/: af.h  eigen.h
include/cl/: cl_array.h  cl_blas_defs.h  cl_c_kernel.h  cl_ctx.h  cl_functions.h  cl_rand.h  cl_utils.h
include/cl/kernels/: cl_copy_gmem.cl  copy.cl  fmads.cl  fmads4.tt.c  reduce.cl
include/utils/: ansi_colors.h  common.h  configs.h  dict.h  eigen_scan.h  io.h  perf.h  regex_utils.h  string.h
perfdata/: bench_cl_map_gmem_2d_copy_titan_x  k_gen_528384_32_2_48_43_3072_float4_0_1_cl_map_gmem_2d_copy.cl  k_gen_528384_64_1_48_43_3072_float4_0_1_cl_map_gmem_2d_copy.cl
src/benchmarks/: bandwidth.cc  flops.cc  fmap.cc  fold.cc  gemm.cc  permute.cc  reduce.cc  scan.cc
src/examples/: bandwidth.cc  copy.cc  fold.cc  generate.cc  initcl.cc  reduce.cc
src/tests/: gemm.cc  reduce.cc
